despliegue/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-sport-sales-service
  namespace: ai-sport-sales
spec:
  selector:
    app: ai-sport-sales
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
